# adrians-geotools

./: LICENSE  README.md  requirements.txt  setup.cfg
EopTool/: __init__.py  __main__.py  calc.py  io.py  units.py  visualise.py
EopTool/interface/: BoundedEntry.py  FileSelecter.py  InterfaceState.py  MainWindow.py  ParameterEntry.py  ParameterView.py  Plot.py  SigmaEntry.py
HelmertTool/: __init__.py  __main__.py  calc.py  io.py  units.py  visualise.py
HelmertTool/interface/: FileSelecter.py  InterfaceState.py  MainWindow.py  ParameterEntry.py  ParameterView.py  Plot.py  SelectStations.py
HelmertTool/resources/: transform_sites.txt
IcrfTool/: __init__.py  __main__.py  calc.py  io.py  plot.py  regression.py  transform.py  units.py  visualisation.py
IcrfTool/interface/: FileSelecter.py  InterfaceState.py  MainWindow.py  ParameterViewA.py  ParameterViewB.py  Plot.py  SelectStations.py
documentation/: EopTool.txt  HelmertTool.txt  IcrfTool.txt  developer guide.txt
examples/: ICRF_transform.py  eop_tool_ex.py  helmert_tool_ex.py  icrf_tool_ex.py  pandas_ex.py
examples/data/: 2020d.eob  2020d.sta  2020d_off_0_0_10p_rate_0_0_0.sta  icrf2_src_posn  usno_finals.fil
