[metadata]
name = adrian-geotools
version = 0.0.1

[options]
packages = find:
install_requires =
    python_version >= "3.8"
    numpy==1.21.1 
    pandas==1.3.1
    matplotlib==3.4.2
    geopandas==0.9.0

[options.entry_points]
console_scripts =
    HelmertTool = HelmertTool:run
    EopTool = EopTool:run
    IcrfTool = IcrfTool:run

[options.package_data]
* = *.png, *.txt